--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,170 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@200;400;500;600;700&display=swap');
+
+:root{
+  --bg-primary: #181820;
+  --color-dark800: #20212c;
+  --bg-secondary: #21212B;
+  --color-primary: #fff;
+  --color-secondary: #FC76A1;
+  /* --color-secondary: #61DAFB; */
+  --color-gray: #adaeb5;
+  --font-primary: 'Montserrat', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+/*Globals*/
+*{
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box;
+}
+li{
+  list-style: none;
+}
+img{
+  max-width: 100%;
+}
+body{
+  font-size: 16px; /*Reset 1rem=16px*/  
+  background-color: var(--bg-primary);
+  color: var(--color-primary);
+  font-family: var(--font-primary);
+}
+button{
+  background-color: unset;
+  border: unset;
+  cursor: pointer;
+}
+.wrapper{
+  max-width: 1200px;
+  margin: 0 auto;
+  width: 90%;
+}
+
+/*Header*/
+.header{
+  padding: .8rem 0rem;
+  background-color: var(--bg-secondary);
+  box-shadow: 1px 20px 20px rgb(0, 0, 0 , 8%);
+}
+.header__title{
+  font-weight: 500;
+  letter-spacing: -0.2rem;
+  font-size: 1.6rem;
+}
+
+/*Todos*/
+.todos{
+  max-width: 600px;
+  width: 90%;
+  margin: 3rem auto;
+}
+.todos__list{
+  margin: 2rem 0rem;
+}
+
+/*Form*/
+.form{
+  border: 2px solid var(--bg-secondary);
+  border-radius: 1.2rem;
+  display: flex;
+  flex-direction: row-reverse;
+  align-items: center;
+  padding: 9px;
+}
+.form__control{
+  flex: 1;
+  background-color: var(--bg-primary);
+  color: var(--color-gray);
+  border: none;
+  margin-left: .5rem;
+  font-size: .95rem;
+}
+.form__submit:focus,
+.form__control:focus{
+  outline: none;
+}
+.form__control::placeholder{
+  color: var(--color-gray);
+  font-size: .95rem;
+}
+.form__submit{
+  width: 22px;
+  height: 22px;
+  padding: 5px;
+  border-radius: 40%; 
+  background-color: var(--color-secondary);
+}
+
+/*Todo*/
+.todo{
+  display: flex;
+  align-items: center;
+  padding: .9rem .8rem;
+  background-color: var(--bg-secondary);
+  border-radius: .8rem;
+  margin: 1rem 0rem;
+}
+
+.todo__title{
+  margin-left: .5rem;
+  flex: 1;
+  color: var(--color-gray);
+  font-size: .85rem;
+}
+.todo__title--completed{
+  text-decoration: line-through;
+}
+.todo__remove{
+  width: 12px;
+  height: 12px;
+  filter: opacity(20%);
+  transition: all 0.4s ease-in-out;
+}
+.todo__remove:hover{
+  filter: opacity(100%);
+}
+
+/*My custom checkbox*/
+.checkbox{
+  position: relative;
+  width: 20px;
+  height: 20px;
+}
+.checkbox__input{
+  visibility: hidden;
+}
+.checkbox__label{
+  display: block;
+  position: absolute;
+  content: '';
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  border-radius: 40%;
+  border: 3px solid var(--color-secondary);
+}
+.checkbox__input:checked + .checkbox__label{
+  background-color: var(--color-secondary);
+  background-image: url(./assets/icons/checked.png);
+  background-size: cover;
+}
+
+@media screen and (max-width: 768px) {
+  .form__control, .form__control::placeholder{
+    font-size: 1.1rem;
+  }
+  .form__submit{
+    width: 30px;
+    height: 30px;
+  }
+  .todo{
+    padding: 1.2rem .8rem;
+  }
+  .todo__title{
+    font-size: 1rem;
+  }
+  .checkbox{
+    width: 24px;
+    height: 24px;
+  }
 }
