--- a/src/index.css
+++ b/src/index.css
@@ -171,3 +171,24 @@ button{
     height: 24px;
   }
 }
+
+/*Transitions for animations*/
+.todo-enter {
+  opacity: 0.01;
+  transform: translate(0, -10px);
+}
+.todo-enter-active {
+  opacity: 1;
+  transform: translate(0, 0);
+  transition: all 300ms ease-in;
+}
+.todo-exit {
+  opacity: 1;
+  transform: translate(0, 0);
+}
+.todo-exit-active {
+  opacity: 0.01;
+  transform: translate(0, 10px);
+  transition: all 300ms ease-in;
+}
+
