--- a/src/index.css
+++ b/src/index.css
@@ -71,15 +71,30 @@ button{
   align-items: center;
   padding: 9px;
   margin-bottom: 2rem;
+  overflow: hidden;
+}
+.form__group{
+  flex: 1;
+  position: relative;
+}
+.form__group--error::after{
+  content: '';
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 20px;
+  background-size: cover;
+  background-image: url('./assets/icons/warning.png');
 }
 .form__control{
-  flex: 1;
   background-color: var(--bg-primary);
   color: var(--color-gray);
   border: none;
   margin-left: .5rem;
   font-size: .95rem;
 }
+
 .form__submit:focus,
 .form__control:focus{
   outline: none;
@@ -91,9 +106,9 @@ button{
 .form__submit{
   width: 22px;
   height: 22px;
-  padding: 5px;
   border-radius: 40%; 
   background-color: var(--color-secondary);
+  padding: 5px;
 }
 
 /*Todo*/
@@ -155,8 +170,8 @@ button{
     font-size: 1.1rem;
   }
   .form__submit{
-    width: 30px;
-    height: 30px;
+    width: 26px;
+    height: 26px;
   }
 
   .todo{
