--- a/src/index.css
+++ b/src/index.css
@@ -93,6 +93,7 @@ button{
   border: none;
   margin-left: .5rem;
   font-size: .95rem;
+  width: 100%;
 }
 
 .form__submit:focus,
@@ -178,32 +179,11 @@ button{
     padding: 1.2rem .8rem;
   }
   .todo__title{
-    font-size: 1rem;
+    font-size: 15px;
   }
 
   .checkbox{
-    width: 24px;
-    height: 24px;
+    width: 22px;
+    height: 22px;
   }
 }
-
-/*Transitions for animations*/
-.todo-enter {
-  opacity: 0.01;
-  transform: translate(0, -10px);
-}
-.todo-enter-active {
-  opacity: 1;
-  transform: translate(0, 0);
-  transition: all 300ms ease-in;
-}
-.todo-exit {
-  opacity: 1;
-  transform: translate(0, 0);
-}
-.todo-exit-active {
-  opacity: 0.01;
-  transform: translate(0, 10px);
-  transition: all 300ms ease-in;
-}
-
